Fix text-alignment issue of the listed triangles by adding width to 20% and margin set to auto

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 body {
   text-align: center;
 }
+body ul {
+  width: 20%;
+  margin: auto;
+}
